Refund Transaction to pass a buyer object

--- a/Vapour.vcxproj
+++ b/Vapour.vcxproj
@@ -139,6 +139,7 @@
   <ItemGroup>
     <Text Include="CurrentUserAccounts.txt" />
     <Text Include="DailyTransactions.txt" />
+    <Text Include="GameCollection.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="AvailableGames.txt" />
